--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ Assignment_5/Siddharth_A5.ipynb
 *.zip
 Lecture Slides/
 class_exercises/
+Assignment_6/A6_Siddharth.ipynb
+Assignment_6/python-3.10.0post2-macos11.pkg
+B505-Final-Exam/.DS_Store
